--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "lib"
   ],
   "keywords": [
-    ""
+    "karma",
+    "ava",
+    "plugin",
+    "browser",
+    "test",
+    "testing"
   ],
   "dependencies": {
     "babel-core": "^6.9.1",
     "bluebird": "^3.4.1",
     "browserify": "^13.0.1",
-    "convert-source-map": "^1.2.0",
     "express": "^4.14.0",
     "figures": "^1.7.0",
     "find-cache-dir": "^0.1.1",
