--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "babel-core": "^6.9.1",
     "bluebird": "^3.4.1",
+    "browser-resolve": "^1.11.2",
     "browserify": "^13.0.1",
     "express": "^4.14.0",
     "figures": "^1.7.0",
